--- a/rep02.html
+++ b/rep02.html
@@ -22,7 +22,7 @@
 <body>
   <div class=header>
     <h1>2週目のレポート ： 公大高専１年実習I-1</h1>
-    <div>○○班○○番 ニックネーム</div>
+    <div>3b班25番 きゃらめる</div>
   </div>
   <div class=2week>
     <h2>第2週目</h2>
@@ -30,11 +30,11 @@
       <h3>2-1 2週目のレポートをHTMLで作る</h3>
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        この実習のホームページの形でレポートにする。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        ホームページを作るのはプログラミングのことについてあまり知らない私にとってこんなにも<br>
+        複雑なものを書かないといけないことに恐怖を覚えました。すこしでもプログラムの内容を<br>
+        変えてしまうと、どう直せばいいのかわからないので、あまり触りたくなものだと思います。<br>
         3. 2週目が完成した人は1週目のレポートも完成させる<br>
       </div>
     </div>
