--- a/rep02.html
+++ b/rep02.html
@@ -60,8 +60,8 @@
         学習した内容を説明する文章を<br>
         自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        VRでロブロックスをしたときすぐに頭が痛くなって気持ち悪くなったためあまり体験できなかった。<br>
+        
       </div>
     </div>
 
