--- a/rep02.html
+++ b/rep02.html
@@ -44,11 +44,12 @@
       <img src="ml.png" alt="TeachableMachineの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        カメラを使った画像を分類する機械学習の体験をした。<br>
+        Teachable Machineを使って３つの対象(グーとチョキとパー)を判別する機械学習モデルを作成し、<br>
+        この機能をscratchプログラムに取り込んで判別したものによって異なる動きをするプログラミングを作成した。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        こんなに簡単に対象を判別することができる機能を作ることができるのかとびっくりした。<br>
+        AIが成長したことで可能になったことは分かるがあらためてAIはすごい技術だなと思った。
       </div>
     </div>
 
