--- a/rep01.html
+++ b/rep01.html
@@ -57,11 +57,10 @@
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
         <a href="https://kyaramer3.github.io/web/">私のホームページ</a><br>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        GitHubという環境でマークアップ言語のひとつであるHTMLを体験する。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        ホームページを作成したが反映せれてないせいか404と出てきてしまった。<br>
+        改善の方法を思いだすことができなかったためこのままにしておきます。どうやるんですか？<pr>
       </div>
     </div>
 
