--- a/rep02.html
+++ b/rep02.html
@@ -30,7 +30,7 @@
       <h3>2-1 2週目のレポートをHTMLで作る</h3>
       <div>
         1.内容<br>
-        この実習のホームページの形でレポートにする。<br>
+        この実習をホームページの形でレポートにする。<br>
         2.感想<br>
         ホームページを作るのはプログラミングのことについてあまり知らない私にとってこんなにも<br>
         複雑なものを書かないといけないことに恐怖を覚えました。すこしでもプログラムの内容を<br>
@@ -58,11 +58,12 @@
       <img src="wroom.png" alt="metaWRの画像" width="50%" height="50%"> <img src="roblox.png" alt="ロブロックスの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        情報技術で作成された仮想空間を体験する。<br>
+        一つは、Meta社が作成した仮想会議室Workrooms、もう一つはRobloxで作成された屋外空間です。<br>
         2.感想<br>
         VRでロブロックスをしたときすぐに頭が痛くなって気持ち悪くなったためあまり体験できなかった。<br>
-        
+        VRゴーグルはどのようにして目をごまかして空間を見せつけているのかが気になりました。<br>
+        また、それとともになぜ人によって酔いやすさが変わるのが気になりました。<br>
       </div>
     </div>
 
@@ -70,10 +71,10 @@
       <h3>各ページへのリンク</h3>
       <div>
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
-        <a href="https://yourID.github.io/web/rep01.html">1週目のレポート</a><br>
-        <a href="https://yourID.github.io/web/rep02.html">2週目のレポート</a><br>
-        <a href="https://yourID.github.io/web/rep03.html">3週目のレポート</a><br>
-        <a href="https://yourID.github.io/web/">私のホームページ</a><br>
+        <a href="https://kyarameru3.github.io/web/rep01.html">1週目のレポート</a><br>
+        <a href="https://kyarameru3.github.io/web/rep02.html">2週目のレポート</a><br>
+        <a href="https://kyarameru3.github.io/web/rep03.html">3週目のレポート</a><br>
+        <a href="https://kyarameru3.github.io/web/">私のホームページ</a><br>
       </div>
     </div>
   </div>
