--- a/rep03.html
+++ b/rep03.html
@@ -31,11 +31,11 @@
       <a href="https://kyarameru3.github.io/web/vr.html">自作した３次元空間</a><br>
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        JavaScript言語によるコーディングによるVR空間のプログラミング体験をした。<br>
+        この実習では、「Webプログラミング道場」というサイトを利用してプログラミングをする。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        ここにこの形の図形をこんな感じに配置したいと考えても配置の方法がまだ理解しきれていないため<br>
+        数分貰ってオリジナルのVR空間を作ろうとしたがうまく作ることができなかった。<br>
       </div>
     </div>
     <div>
