--- a/rep03.html
+++ b/rep03.html
@@ -44,11 +44,12 @@
       <a href="https://kyarameru3.github.io/web/dengon.html">伝言板</a><br>
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        JaveScript言語によるWeb上で動作する「伝言板アプリ」のコーディング体験をした。<br>
+        これは、「Webプログラミング道場」というサイトに入力して実行できることを確認する。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        プログラミングを作成している人たちはあんなにもの文章を一つ一つ覚えているのを考えると<br>
+        ものすごい記憶力があるなと思いました。文字が一つ違うだけでもうまく動きませんし、仕組みは<br>
+        簡単だとしてもあんなにかける気がしません。<br>
       </div>
     </div>
 
@@ -57,11 +58,11 @@
       <img src="interactive.png" alt="VRゲームの画像" width="20%" height="20%"><br>
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        インタラクティブなWebVRプログラムの体験をした。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        やっぱりVRをして酔った。VR空間を手元のリモコンをもとに移動したり、白いボールを飛ばしたり<br>
+        配置されているものを移動させたりできた。白いボールが壁や配置されているものにぶつかって反射<br>
+        しているのを見るとそれぞれにぶつかる判定を作っているのだなと思った。
       </div>
     </div>
 
